--- a/trunk/ big-caller-id-theme-template/StyleTemplateActivity/res/values/dimen.xml
+++ b/trunk/ big-caller-id-theme-template/StyleTemplateActivity/res/values/dimen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <dimen name="answer_left">0dp</dimen>
     <dimen name="answer_bottom">10dp</dimen>
     <dimen name="decline_right">0dp</dimen>
@@ -17,4 +18,7 @@
     <dimen name="caller_field_bottom">120dp</dimen>
     <dimen name="mute_right">20dp</dimen>
     <dimen name="mute_top">10dp</dimen>
+    <dimen name="caller_field_number_text_size">16sp</dimen>
+    <dimen name="caller_field_text_size">20sp</dimen>
+
 </resources>
